# smart-contract-v2

./: .gitignore  COMPLETE_CONTRACTS_GENERATOR.sh  CREATE_PROJECT.sh  Cargo.toml  DEFI_REPORT.md  FULL_PROJECT_GENERATOR.py  IMPORTANT_NOTES.txt  LICENSE  QUICK_START.md  README.md  build_all.sh  generate_contracts.sh  prompt_guide_fix_error_build_smart_contract.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
contracts/lp-locker/: Cargo.toml
contracts/lp-locker/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/prc20-pre-market/: Cargo.toml  README.md
contracts/prc20-pre-market/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/prc20-staking/: Cargo.toml
contracts/prc20-staking/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/prc20-vesting/: Cargo.toml  README.md
contracts/prc20-vesting/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs  vesting.rs
contracts/reward-controller/: Cargo.toml
contracts/reward-controller/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
docs/: API.md  DEPLOYMENT.md  PRC20_STAKING_GUIDE.md  PROTOCOL_MASTER.md  SYSTEM_OVERVIEW.md  prc20-vesting.md
frontend/: admin.html  index.html
frontend/assets/css/: styles.css
frontend/assets/js/: app.js
stickman-rpg/backend/: package.json
stickman-rpg/backend/src/: database.js  index.js
stickman-rpg/backend/src/engine/: BattleEngine.js  GameCore.js  TournamentEngine.js
stickman-rpg/backend/src/models/: BattleLog.js  Guild.js  NFT.js  RentalOrder.js  Tournament.js  User.js
stickman-rpg/backend/src/services/: GuildService.js  MarketplaceService.js  NFTService.js  PaymentService.js  RankingService.js  RentalService.js  RewardDistributor.js  WalletManager.js
stickman-rpg/backend/tests/: battle_simulation.test.js
stickman-rpg/frontend/: package.json
stickman-rpg/frontend/src/pages/: BattleArena.js  CharacterManagement.js  GameLobby.js  LandingPage.js  Marketplace.js  WalletDashboard.js
stickman-rpg/frontend/src/services/: BlockchainService.js
