[package]
name = "lp-locker"
version = "2.0.0"
authors = ["Paxi Network <dev@paxi.network>"]
edition = "2021"
description = "Secure LP token locker for Paxi Network"
license = "MIT"
repository = "https://github.com/paxi-network/lp-platform"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.5"
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw20 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.20"
cosmwasm-vm = "1.5"
