[package]
name = "lp-locker"
version = "2.0.0"
authors = ["Paxi Network <dev@paxi.network>"]
edition = "2021"
description = "Secure LP token locker for Paxi Network"
license = "MIT"
repository = "https://github.com/paxi-network/lp-platform"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "=1.5.0"
cosmwasm-schema = "=1.5.0"
cw-storage-plus = "=1.2.0"
cw2 = "=1.1.0"
cw20 = "=1.1.0"
schemars = "=0.8.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.16.5"
cosmwasm-vm = "=1.5.0"
