[package]
name = "prc20-staking"
version = "1.0.0"
authors = ["Paxi Network <dev@paxi.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'
overflow-checks = true

[dependencies]
cosmwasm-std = "=1.5.0"
cosmwasm-schema = "=1.5.0"
cw-storage-plus = "=1.2.0"
cw2 = "=1.1.0"
cw20 = "=1.1.0"
cw721 = "0.18"
schemars = "=0.8.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
base64ct = "=1.6.0"

[dev-dependencies]
cw-multi-test = "0.16.5"
